--- a/src/main/resources/lang/messages_zh.properties
+++ b/src/main/resources/lang/messages_zh.properties
@@ -6,71 +6,39 @@ error_user_locked=\u7528\u6237\u5df2\u7ecf\u88ab\u9501\u5b9a\u4e0d\u80fd\u767b\u
 error_user_locked_10min=\u8d26\u53f7\uff1a{0} \u767b\u5f55\u5931\u8d25\u6b21\u6570\u8fc7\u591a,\u9501\u5b9a10\u5206\u949f!
 error_login_exception=\u767b\u5f55\u5f02\u5e38\uff0c\u8bf7\u8054\u7cfb\u7ba1\u7406\u5458\uff01
 error_init_failed=\u521d\u59cb\u5316\u5931\u8d25\uff01\u8bf7\u8054\u7cfb\u7ba1\u7406\u5458{0}
+error_ip=\u65e0\u6cd5\u83b7\u53d6\u767b\u5f55\u7528\u6237IP
+error_login_user=\u65e0\u6cd5\u83b7\u53d6\u767b\u5f55\u7528\u6237\u4fe1\u606f\uff01
+error_method_wrong=<font color="red">\u6267\u884c\u65b9\u6cd5\u5f02\u5e38:-->{0}</font>
+error_base_method=\u8c03\u7528\u516c\u5171\u65b9\u6cd5\uff0c\u4f20\u5165\u53c2\u6570\u6709\u9519\u8bef\uff01\u5177\u4f53\u8bf7\u770b\u53c2\u6570\u8bf4\u660e\uff01
+error_statis={0}\u7edf\u8ba1SQL\u51fa\u9519,\u81ea\u52a8\u8f6c\u6362\u4e3a\u666e\u901a\u7edf\u8ba1SQL\u8bed\u53e5!
+error_loading_wrong=\u521d\u59cb\u5316\u6570\u636e\u5931\u8d25,\u6ca1\u6cd5\u52a0\u8f7d\u8868\u5b57\u6bb5\u5230\u7f13\u5b58 -->>{0}
+error_ehcache_manager=\u8c03\u7528\u524d\u8bf7\u5148\u521d\u59cb\u5316CacheManager\u503c\uff1aEHCacheUtil.initCacheManager
+error_ehcache_cache=\u8c03\u7528\u524d\u8bf7\u5148\u521d\u59cb\u5316Cache\u503c\uff1aEHCacheUtil.initCache(\u53c2\u6570)
+# \u6210\u529f\u6d88\u606f #
+info_run_success=\u6267\u884c\u6210\u529f!
+info_call_method=\u516c\u5171\u65b9\u6cd5\u88ab\u8c03\u7528,\u4f20\u5165\u53c2\u6570 ==>>{0}
+# \u8b66\u544a\u6d88\u606f #
+warn_not_find_anno=\u5728{0}\u6ca1\u6709\u627e\u5230\u6570\u636e\u5e93\u8868\u5bf9\u5e94\u8be5\u7684\u6ce8\u89e3!
+warn_cpu=CPU\u5f53\u524d:{0}%,\u8d85\u51fa\u9884\u8bbe\u503c{1}%<br>
+warn_jvm=JVM\u5f53\u524d:{0}%,\u8d85\u51fa\u9884\u8bbe\u503c{1}%<br>
+warn_ram=\u5185\u5b58\u5f53\u524d:{0}%,\u8d85\u51fa\u9884\u8bbe\u503c{1}%<br>
+info_server_pre=\u670d\u52a1\u5668\u9884\u8b66\u63d0\u793a - {0}
+info_mail_data_red=style="color: red;font-weight: 600;"
+info_mail_content=\u5f53\u524d\u65f6\u95f4\u662f:{0}<br/><br/><style type="text/css">{1}</style>
+info_css_monitor_1=.common-table{-moz-user-select:none;width:100%;border:0;table-layout:fixed;border-top:1px solid #dedfe1;}
+info_css_monitor_2=/*header*/.common-table thead td, .common-table thead th{height:23px;background-color:#e4e8ea;text-align:center;border-left:1px solid #dedfe1;}
+info_css_monitor_3=.common-table thead th, .common-table tbody th{padding-left:7px;padding-right:7px;width:15px;text-align:center;}
+info_css_monitor_4=.common-table tbody td, .common-table tbody th{height:25px!important;border-bottom:1px solid #dedfe1;border-left:1px solid #dedfe1;cursor:default;word-break:break-all;-moz-outline-style:none;_padding-right:7px;text-align:center;}
+info_mail_content_2=<table class="common-table"><thead><tr><td width="100">\u540d\u79f0</td><td width="100">\u53c2\u6570</td><td width="275">\u9884\u8b66\u8bbe\u7f6e</td></tr></thead><tbody id="tbody">"<tr {0}><td>CPU</td><td style="text-align:left;">\u5f53\u524d\u4f7f\u7528\u7387:{1}%</td>
+info_mail_content_3=<td>\u4f7f\u7528\u7387\u8d85\u51fa{0}%,\u53d1\u9001\u90ae\u7bb1\u63d0\u793a</td></tr><tr {1}><td>\u670d\u52a1\u5668\u5185\u5b58</td><td style="text-align:left;">\u5f53\u524d\u4f7f\u7528\u7387:{2}%</td><td>\u4f7f\u7528\u7387\u8d85\u51fa{3}%,\u53d1\u90ae\u7bb1\u63d0\u793a</td></tr>
+info_mail_content_4=<tr {0}><td>JVM\u5185\u5b58</td><td style="text-align: left;">\u5f53\u524d\u4f7f\u7528\u7387:{1}%</td><td>\u4f7f\u7528\u7387\u8d85\u51fa {2}%,\u53d1\u9001\u90ae\u7bb1\u63d0\u793a </td></tr></tbody></table>
+info_mail_send=\u53d1\u9001\u90ae\u4ef6!
+error_mail_send=\u53d1\u9001\u90ae\u4ef6\u5931\u8d25!
 ###########################
-#\u7cfb\u7edf\u6d88\u606f
-user_not_exist=\u7528\u6237\u540d\u6216\u8005\u5bc6\u7801\u8f93\u5165\u9519\u8bef\uff0c\u8bf7\u91cd\u65b0\u8f93\u5165\uff01
-data_not_found=\u6ca1\u6709\u627e\u5230\u8fd9\u6761\u6570\u636e
-user_locked=\u7528\u6237\u5df2\u88ab\u9501\u5b9a\uff0c\u65e0\u6cd5\u8fdb\u884c\u767b\u5f55\u64cd\u4f5c\uff01
-invalid_session=session\u8fc7\u671f\u4e86\uff0c\u8bf7\u91cd\u65b0\u767b\u5f55
-sys_error=\u7cfb\u7edf\u5f02\u5e38\uff01
-noavaliablearacker=\u627e\u4e0d\u5230\u53ef\u7528\u7684tracker
-remotefile_address_error=\u5730\u5740\u683c\u5f0f\u6709\u9519\u8bef\uff0c\u5730\u5740\u683c\u5f0f\u5e94\u4e3a\uff1agroup1\:\u6587\u4ef6\u540d
-remotefile_not_exist=\u6587\u4ef6\u4e0d\u5b58\u5728
-content_save_success=\u54a8\u8be2\u5df2\u7ecf\u4fdd\u5b58\uff0c\u786e\u8ba4\u65e0\u8bef\u540e\u8bf7\u63d0\u4ea4\u8fdb\u884c\u5ba1\u6279\u3002
-content_change_success=\u54a8\u8be2\u4fee\u6539\u6210\u529f\uff0c\u8bf7\u786e\u8ba4\u65e0\u8bef\u540e\u63d0\u4ea4\u8fdb\u884c\u5ba1\u6279
-content_submit_success=\u8d44\u8baf\u63d0\u4ea4\u6210\u529f\uff0c\u7b49\u5f85\u7ba1\u7406\u5458\u8fdb\u884c\u5ba1\u6279\u3002
-content_delete_success=\u8d44\u8baf\u5220\u9664\u6210\u529f\uff01
-content_checkpass_success=\u8d44\u8baf\u5ba1\u6838\u6210\u529f\uff01
-content_checkback_success=\u8d44\u8baf\u5df2\u88ab\u9a73\u56de\uff01
-content_channel_select=\u8bf7\u9009\u62e9\u8d44\u8baf\u6a21\u5757\uff01
-content_type_select=\u8bf7\u9009\u62e9\u8d44\u8baf\u7c7b\u578b\uff01
-access_denied=\u6ca1\u6709\u8bbf\u95ee\u6743\u9650\uff01
-assign_buttonrole_success=\u89d2\u8272\u6309\u94ae\u5206\u914d\u6210\u529f
-menu_authorith_no=\u89d2\u8272[{0}]\u6ca1\u6709\u8bbf\u95ee\u83dc\u5355[{1}]\u7684\u6743\u9650\uff0c\u8bf7\u5148\u5c06\u8be5\u83dc\u5355\u7684\u6743\u9650\u8d4b\u7ed9\u8be5\u89d2\u8272\u3002
-userinfo_not_exist=\u672a\u83b7\u53d6\u5230\u7528\u6237\u4fe1\u606f\u3002
-error_user_exist=\u7528\u6237[{0}]\u5df2\u7ecf\u5b58\u5728\uff0c\u8bf7\u91cd\u65b0\u8f93\u5165\u3002
-error_user_not_exist=\u7528\u6237[{0}]\u4e0d\u5b58\u5728\uff0c\u65e0\u6cd5\u7f16\u8f91\u3002
-newuser_save_success=\u65b0\u589e\u7528\u6237\u6210\u529f\u3002
-user_edit_success=\u7528\u6237\u4fe1\u606f\u66f4\u65b0\u6210\u529f\u3002
-user_delete_success=\u7528\u6237\u5220\u9664\u6210\u529f\uff01
-mustinput_error=\u8bf7\u8f93\u5165{0}
-inputlength_range_error={0}\u8bf7\u8f93\u5165{1}\u5b57\u4ee5\u4e0a{2}\u5b57\u4ee5\u5185\u3002
-inputlength_error={0}\u8bf7\u8f93\u5165{1}\u5b57\u4ee5\u5185\u3002
-inputformat_error={0}\u683c\u5f0f\u8f93\u5165\u4e0d\u6b63\u786e
-save_new_success={0}\u65b0\u589e\u6210\u529f\u3002
-role_not_exist=\u89d2\u8272[{0}]\u4e0d\u5b58\u5728\u3002
-not_empty_error={0}\u4e0d\u80fd\u4e3a\u7a7a
-role_exist_error=\u89d2\u8272[{0}]\u5df2\u7ecf\u5b58\u5728\uff0c\u8bf7\u91cd\u65b0\u8f93\u5165\u3002
-role_edit_success=\u89d2\u8272\u4fe1\u606f\u66f4\u65b0\u6210\u529f\u3002
-delete_role_error=\u89d2\u8272{0}\u5df2\u7ecf\u8d4b\u7ed9\u7528\u6237\uff0c\u8bf7\u5148\u89e3\u9664\u62e5\u6709\u8be5\u89d2\u8272\u7684\u7528\u6237
-delete_role_success=\u89d2\u8272{0}\u5220\u9664\u6210\u529f\u3002
-authority_success={0}\u6388\u6743\u6210\u529f\u3002
-assign_userrole_success=\u7528\u6237\u89d2\u8272\u5206\u914d\u6210\u529f\u3002
-login_attempt_error=\u8be5\u8d26\u53f7\u8fde\u7eed\u4e09\u6b21\u767b\u5f55\u5931\u8d25\uff0c\u8bf7\u4e8e{0}\u5206{1}\u79d2\u540e\u91cd\u8bd5\u3002
-excel_mustinput_error=\u7b2c{0}\u884c\uff0c{1}\u4e0d\u5141\u8bb8\u4e3a\u7a7a\u3002
-excel_length_error=\u7b2c{0}\u884c\uff0c{1}\u7684\u957f\u5ea6\u4e0d\u6b63\u786e\u3002
-excel_type_error=\u7b2c{0}\u884c\uff0c{1}\u7684\u7c7b\u578b\u4e0d\u6b63\u786e\u3002
-quartz_add_success={0}\u6dfb\u52a0\u6210\u529f\u3002
-quartz_delete_success=\u5b9a\u65f6\u4efb\u52a1\u5220\u9664\u6210\u529f\u3002
-quartz_delete_error= \u5b9a\u65f6\u4efb\u52a1\u5220\u9664\u5931\u8d25
-quartz_resume_success=\u5b9a\u65f6\u4efb\u52a1\u6062\u590d\u6210\u529f\u3002
-quartz_pause_success=\u5b9a\u65f6\u4efb\u52a1\u6682\u505c\u6210\u529f\u3002
-quartz_run_success=\u5b9a\u65f6\u4efb\u52a1\u6267\u884c\u6210\u529f\u3002
-##################################
-error_exist=\u6570\u636e\u5df2\u7ecf\u5b58\u5728\uff0c\u8bf7\u91cd\u65b0\u8f93\u5165\u3002
-error_not_exist=\u6570\u636e\u4e0d\u5b58\u5728\uff01
-data_not_exist=\u4fe1\u606f\u4e0d\u5b58\u5728\uff01
-update_success=\u66f4\u65b0\u6210\u529f\uff01
-delete_success=\u5220\u9664\u6210\u529f\uff01
-send_success=\u53d1\u9001\u6210\u529f\uff01
-save_success=\u4fdd\u5b58\u6210\u529f\uff01
-upload_success=\u6587\u4ef6\u4e0a\u4f20\u6210\u529f\uff01
-upload_failed=\u6587\u4ef6\u4e0a\u4f20\u5931\u8d25\uff01
-download_success=\u4e0b\u8f7d\u6587\u4ef6\u6210\u529f\uff01
-download_failed=\u4e0b\u8f7d\u6587\u4ef6\u5931\u8d25\uff01
-data_error_from_client=\u5ba2\u6237\u7aef\u63d0\u4ea4\u7684\u5ba1\u6279\u6570\u636e\u6709\u9519\u8bef\uff01
-step_not_exist=\u56fe\u6587\u64cd\u4f5c\u6b65\u9aa4\u4e0d\u5b58\u5728\uff01
-update_step_error=\u56fe\u6587\u4fe1\u606f\u4e0d\u5b58\u5728,\u4e0d\u80fd\u4fee\u6539\u56fe\u6587\u6b65\u9aa4!
-operate_type_error=\u5ba2\u6237\u7aef\u4e0a\u4f20\u5ba1\u6279\u8bb0\u5f55\u64cd\u4f5c\u7c7b\u578b\u9519\u8bef\uff0c\u65e0\u6cd5\u5904\u7406\uff01
-###############################
-###############################
+## excel\u8868\u683c\u76f8\u5173  ###########
+excel_sheep_name=\u6570\u636e
+###########################
+# \u7cfb\u7edf\u6d88\u606f ##################
+info_ip_no_addr=\u65e0\u6cd5\u83b7\u53d6\u4e3b\u673aIP
+info_ip_no_name=\u65e0\u6cd5\u83b7\u53d6\u4e3b\u673a\u540d
+###########################
